fixed styling issue on mobile on the homepage

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -153,4 +153,5 @@ article img {
 .post-title {
     display: inline-block;
     max-width: calc(100% - 130px);
+    vertical-align: middle;
 }
